fix: default class add style (z-index)

--- a/src/medium-zoom.css
+++ b/src/medium-zoom.css
@@ -5,6 +5,7 @@
   bottom: 0;
   left: 0;
   opacity: 0;
+  z-index: 9999;
   transition: opacity 300ms;
   will-change: opacity;
 }
